--- a/spriteMaker/spriteMaker/ColorPaletteListPopup.storyboard
+++ b/spriteMaker/spriteMaker/ColorPaletteListPopup.storyboard
@@ -59,7 +59,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Palette name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhc-6D-HNn">
-                                                            <rect key="frame" x="8" y="5" width="207" height="20"/>
+                                                            <rect key="frame" x="8" y="5" width="209" height="20"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                                                                                 <rect key="frame" x="0.0" y="0.0" width="62" height="56"/>
                                                                                 <subviews>
                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAv-0X-LA5">
-                                                                                        <rect key="frame" x="44" y="0.0" width="18" height="18"/>
+                                                                                        <rect key="frame" x="44" y="38" width="18" height="18"/>
                                                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="width" constant="18" id="0y9-X3-fG5"/>
@@ -102,8 +102,8 @@
                                                                                 </subviews>
                                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <constraints>
+                                                                                    <constraint firstAttribute="bottom" secondItem="dAv-0X-LA5" secondAttribute="bottom" id="HBV-Ns-eel"/>
                                                                                     <constraint firstAttribute="trailing" secondItem="dAv-0X-LA5" secondAttribute="trailing" id="qTM-j1-c2z"/>
-                                                                                    <constraint firstItem="dAv-0X-LA5" firstAttribute="top" secondItem="14M-C3-A8U" secondAttribute="top" id="uPr-uZ-HzP"/>
                                                                                 </constraints>
                                                                             </view>
                                                                         </subviews>
@@ -138,25 +138,28 @@
                                                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="regular"/>
                                                             </state>
                                                         </button>
-                                                        <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gOr-Kx-KKR">
+                                                        <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gOr-Kx-KKR">
                                                             <rect key="frame" x="8" y="8" width="209" height="17"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
                                                             <textInputTraits key="textInputTraits" spellCheckingType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                            <connections>
+                                                                <outlet property="delegate" destination="EwK-FN-g91" id="StB-2L-oOt"/>
+                                                            </connections>
                                                         </textField>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="UQf-id-5aj" secondAttribute="trailing" constant="8" id="0ul-3I-D1S"/>
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="top" secondItem="gOr-Kx-KKR" secondAttribute="bottom" constant="5" id="1lo-25-DJt"/>
+                                                        <constraint firstItem="dhc-6D-HNn" firstAttribute="width" secondItem="gOr-Kx-KKR" secondAttribute="width" id="ATq-A4-uAd"/>
                                                         <constraint firstAttribute="trailing" secondItem="3Jv-PP-FWM" secondAttribute="trailing" constant="8" id="I5d-DW-lGb"/>
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="top" secondItem="3Jv-PP-FWM" secondAttribute="bottom" constant="5" id="ILA-2D-Os5"/>
                                                         <constraint firstItem="dhc-6D-HNn" firstAttribute="top" secondItem="HLf-9h-5Lz" secondAttribute="top" constant="5" id="Kcr-uA-CyY"/>
                                                         <constraint firstItem="dhc-6D-HNn" firstAttribute="leading" secondItem="HLf-9h-5Lz" secondAttribute="leading" constant="8" id="NFe-qc-XyF"/>
                                                         <constraint firstItem="3Jv-PP-FWM" firstAttribute="leading" secondItem="gOr-Kx-KKR" secondAttribute="trailing" constant="30" id="bhU-Vf-Ge1"/>
                                                         <constraint firstItem="3Jv-PP-FWM" firstAttribute="top" secondItem="HLf-9h-5Lz" secondAttribute="top" constant="8" id="cxv-fF-ZXO"/>
-                                                        <constraint firstAttribute="trailing" secondItem="dhc-6D-HNn" secondAttribute="trailing" constant="100" id="dno-FZ-MN0"/>
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="leading" secondItem="HLf-9h-5Lz" secondAttribute="leading" constant="8" id="eHB-cU-fJy"/>
                                                         <constraint firstItem="gOr-Kx-KKR" firstAttribute="top" secondItem="HLf-9h-5Lz" secondAttribute="top" constant="8" id="fdt-Zj-RIo"/>
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="top" secondItem="dhc-6D-HNn" secondAttribute="bottom" constant="5" id="g0c-Yk-qcf"/>
@@ -181,7 +184,7 @@
                                         </connections>
                                     </collectionView>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bA8-LQ-twQ">
-                                        <rect key="frame" x="48" y="5" width="60" height="30"/>
+                                        <rect key="frame" x="45" y="5" width="60" height="30"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="bA8-LQ-twQ" secondAttribute="height" multiplier="2:1" id="izK-Dq-ZqB"/>
@@ -249,13 +252,13 @@
                                     <constraint firstAttribute="trailing" secondItem="aXU-TI-NOV" secondAttribute="trailing" constant="10" id="Bay-tg-efl"/>
                                     <constraint firstItem="5Rm-3P-NGq" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="15" id="FcV-sI-gXc"/>
                                     <constraint firstAttribute="width" secondItem="NXP-bx-ukM" secondAttribute="height" multiplier="1:1" id="MKM-FQ-99B"/>
+                                    <constraint firstItem="bA8-LQ-twQ" firstAttribute="leading" secondItem="YON-ai-GdO" secondAttribute="leading" constant="-5" id="Oho-yL-rLq"/>
                                     <constraint firstAttribute="trailing" secondItem="Bhh-kc-mkV" secondAttribute="trailing" constant="5" id="R07-4u-dNP"/>
                                     <constraint firstItem="aXU-TI-NOV" firstAttribute="top" secondItem="NXP-bx-ukM" secondAttribute="top" constant="5" id="Tlh-NP-56s"/>
                                     <constraint firstItem="Bhh-kc-mkV" firstAttribute="top" secondItem="bA8-LQ-twQ" secondAttribute="bottom" constant="5" id="Wys-uS-I3Q"/>
                                     <constraint firstAttribute="bottom" secondItem="Bhh-kc-mkV" secondAttribute="bottom" constant="13" id="Y6r-9S-iZg"/>
                                     <constraint firstItem="YON-ai-GdO" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="50" id="aNB-dw-1K2"/>
                                     <constraint firstItem="bA8-LQ-twQ" firstAttribute="top" secondItem="NXP-bx-ukM" secondAttribute="top" constant="5" id="c8v-lb-Ukr"/>
-                                    <constraint firstItem="bA8-LQ-twQ" firstAttribute="leading" secondItem="YON-ai-GdO" secondAttribute="trailing" constant="-27.5" id="gjS-xK-onv"/>
                                     <constraint firstItem="Bhh-kc-mkV" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="5" id="tOa-ld-53F"/>
                                 </constraints>
                             </view>
