--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -216,7 +216,7 @@
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
-                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="xdH-ep-VsO" secondAttribute="bottom" id="2jI-6x-jbf"/>
                                                                 <constraint firstAttribute="width" constant="20" id="afP-iA-HaD"/>
@@ -272,13 +272,13 @@
                                                     <rect key="frame" x="5" y="30" width="341" height="79"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mp3-fR-hZf">
-                                                            <rect key="frame" x="0.0" y="-22.666666666666668" width="104" height="79.333333333333329"/>
+                                                            <rect key="frame" x="0.0" y="-27.666666666666668" width="104" height="89.333333333333329"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                                                         </imageView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZQN-8i-t4e">
-                                                            <rect key="frame" x="0.0" y="-25" width="104" height="84"/>
+                                                            <rect key="frame" x="0.0" y="-30" width="104" height="89"/>
                                                             <connections>
                                                                 <action selector="tappedCurrentColor:" destination="P97-ZI-Imn" eventType="touchUpInside" id="EW0-BX-WGl"/>
                                                             </connections>
@@ -299,7 +299,7 @@
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
-                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="cRE-sc-xpk" secondAttribute="bottom" id="5z8-Wx-2Mx"/>
                                                                 <constraint firstAttribute="width" constant="20" id="CDt-lk-owx"/>
@@ -403,14 +403,14 @@
                                                         <constraint firstItem="Z7W-2B-pa6" firstAttribute="top" secondItem="fJF-HQ-axH" secondAttribute="bottom" constant="5" id="DJ5-vK-nfL"/>
                                                         <constraint firstItem="653-DD-e8A" firstAttribute="leading" secondItem="fJF-HQ-axH" secondAttribute="trailing" id="NjJ-t3-pSF"/>
                                                         <constraint firstItem="ZQN-8i-t4e" firstAttribute="leading" secondItem="mp3-fR-hZf" secondAttribute="leading" id="SB9-ab-cb4"/>
-                                                        <constraint firstItem="mp3-fR-hZf" firstAttribute="bottom" secondItem="fJF-HQ-axH" secondAttribute="bottom" id="Tyd-ID-0XC"/>
                                                         <constraint firstAttribute="bottom" secondItem="Z7W-2B-pa6" secondAttribute="bottom" id="e0Z-nK-R9g"/>
                                                         <constraint firstAttribute="trailing" secondItem="653-DD-e8A" secondAttribute="trailing" id="ea5-e3-7c0"/>
                                                         <constraint firstItem="fJF-HQ-axH" firstAttribute="top" secondItem="653-DD-e8A" secondAttribute="top" id="hbZ-Yp-jTV"/>
                                                         <constraint firstItem="fJF-HQ-axH" firstAttribute="bottom" secondItem="653-DD-e8A" secondAttribute="bottom" id="hba-kv-scS"/>
-                                                        <constraint firstItem="mp3-fR-hZf" firstAttribute="top" secondItem="bVc-0N-N98" secondAttribute="top" constant="-25" id="iVG-WK-UGp"/>
+                                                        <constraint firstItem="mp3-fR-hZf" firstAttribute="top" secondItem="bVc-0N-N98" secondAttribute="top" constant="-30" id="iVG-WK-UGp"/>
                                                         <constraint firstItem="ZQN-8i-t4e" firstAttribute="bottom" secondItem="fJF-HQ-axH" secondAttribute="bottom" id="n8b-dM-QTz"/>
                                                         <constraint firstItem="ZQN-8i-t4e" firstAttribute="top" secondItem="mp3-fR-hZf" secondAttribute="top" id="sGN-5s-llV"/>
+                                                        <constraint firstItem="Z7W-2B-pa6" firstAttribute="top" secondItem="mp3-fR-hZf" secondAttribute="bottom" id="ua5-Rj-7me"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
